--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <nav>
         <% if user_signed_in? %>
           <%= link_to 'logout', destroy_user_session_path, method: :delete %>
+          <%= link_to 'edit', edit_user_registration_path %>
         <% else %>
           <%= link_to 'sign up', new_user_registration_path  %>
           <%= link_to 'login', new_user_session_path  %>
