--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<%= current_user.email %>
+<div>name: <%= current_user.name %></div>
+<div>email: <%= current_user.email %></div>
